@@ -1,23 +1,6 @@
-%Error-UNSUPPORTED: t/t_unpacked_concat_bad.v:17:46: Unsupported: Replication to form 'bit[31:0]$[1:0]' data type
+%Error-UNSUPPORTED: t/t_unpacked_concat_bad.v:17:46: Unsupported: Non-1 replication to form 'bit[31:0]$[1:0]' data type
                                                    : ... In instance t
    17 |    localparam bit_int_t count_bits [1:0] = {2{$bits(count_t)}};
       |                                              ^
                     ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
-%Warning-WIDTHCONCAT: t/t_unpacked_concat_bad.v:17:47: Unsized numbers/parameters not allowed in replications.
-                                                     : ... In instance t
-   17 |    localparam bit_int_t count_bits [1:0] = {2{$bits(count_t)}};
-      |                                               ^~~~~
-                      ... Use "/* verilator lint_off WIDTHCONCAT */" and lint_on around source to disable this message.
-%Error-UNSUPPORTED: t/t_unpacked_concat_bad.v:18:45: Unsupported: Replication to form 'bit[31:0]$[1:0]' data type
-                                                   : ... In instance t
-   18 |    localparam bit_int_t count_bitsc [1:0] = {$bits(count_t), $bits(count_t)};
-      |                                             ^
-%Warning-WIDTHCONCAT: t/t_unpacked_concat_bad.v:18:46: Unsized numbers/parameters not allowed in concatenations.
-                                                     : ... In instance t
-   18 |    localparam bit_int_t count_bitsc [1:0] = {$bits(count_t), $bits(count_t)};
-      |                                              ^~~~~
-%Warning-WIDTHCONCAT: t/t_unpacked_concat_bad.v:18:60: Unsized numbers/parameters not allowed in replications.
-                                                     : ... In instance t
-   18 |    localparam bit_int_t count_bitsc [1:0] = {$bits(count_t), $bits(count_t)};
-      |                                                            ^
 %Error: Exiting due to
